@@ -26,6 +26,8 @@ package org.gjt.sp.jedit.gui;
 import java.awt.Component;
 import java.awt.Font;
 import java.util.Vector;
+import java.util.List;
+import java.util.ArrayList;
 import javax.swing.*;
 import javax.swing.table.*;
 //}}}
@@ -85,27 +87,29 @@ public class JCheckBoxList extends JTable
 	//{{{ getCheckedValues() method
 	public Object[] getCheckedValues()
 	{
-		Vector values = new Vector();
+		List<Object> values = new ArrayList<Object>();
 		CheckBoxListModel model = (CheckBoxListModel)getModel();
 		for(int i = 0; i < model.items.size(); i++)
 		{
-			Entry entry = (Entry)model.items.elementAt(i);
+			Entry entry = model.items.get(i);
 			if(entry.checked && !entry.caption)
-				values.addElement(entry.value);
+			{
+				values.add(entry.value);
+			}
 		}
 
 		Object[] retVal = new Object[values.size()];
-		values.copyInto(retVal);
-		return retVal;
+		return values.toArray(retVal);
 	} //}}}
 
 	//{{{ selectAll() method
+	@Override
 	public void selectAll()
 	{
 		CheckBoxListModel model = (CheckBoxListModel)getModel();
 		for(int i = 0; i < model.items.size(); i++)
 		{
-			Entry entry = (Entry)model.items.elementAt(i);
+			Entry entry = model.items.elementAt(i);
 			if(!entry.caption)
 				entry.checked = true;
 		}
@@ -127,17 +131,22 @@ public class JCheckBoxList extends JTable
 	{
 		int row = getSelectedRow();
 		if(row == -1)
+		{
 			return null;
+		}
 		else
+		{
 			return getModel().getValueAt(row,1);
+		}
 	} //}}}
 
 	//{{{ getCellRenderer() method
+	@Override
 	public TableCellRenderer getCellRenderer(int row, int column)
 	{
 		if(column == 0)
 		{
-			Entry entry = (Entry)((CheckBoxListModel)getModel()).items.get(row);
+			Entry entry = ((CheckBoxListModel)getModel()).items.get(row);
 			if(entry.caption)
 				return dummy;
 		}
@@ -204,8 +213,9 @@ public class JCheckBoxList extends JTable
 	} //}}}
 
 	//{{{ DummyRenderer class
-	private class DummyRenderer extends DefaultTableCellRenderer
+	private static class DummyRenderer extends DefaultTableCellRenderer
 	{
+		@Override
 		public Component getTableCellRendererComponent(JTable table, Object value,
 			boolean isSelected, boolean hasFocus, int row, int column)
 		{
@@ -225,13 +235,14 @@ public class JCheckBoxList extends JTable
 			boldFont = plainFont.deriveFont(Font.BOLD);
 		}
 
+		@Override
 		public Component getTableCellRendererComponent(JTable table, Object value,
 			boolean isSelected, boolean hasFocus, int row, int column)
 		{
 			super.getTableCellRendererComponent(table,value,isSelected,
 				hasFocus,row,column);
 
-			Entry entry = (Entry)((CheckBoxListModel)getModel()).items.get(row);
+			Entry entry = ((CheckBoxListModel)getModel()).items.get(row);
 			if(entry.caption)
 				setFont(boldFont);
 			else
@@ -241,29 +252,30 @@ public class JCheckBoxList extends JTable
 	} //}}}
 }
 
+//{{{ CheckBoxListModel class
 class CheckBoxListModel extends AbstractTableModel
 {
-	Vector items;
+	Vector<JCheckBoxList.Entry> items;
 
 	CheckBoxListModel(Vector _items)
 	{
-		items = new Vector(_items.size());
+		items = new Vector<JCheckBoxList.Entry>(_items.size());
 		for(int i = 0; i < _items.size(); i++)
 		{
-			items.addElement(createEntry(_items.elementAt(i)));
+			items.add(createEntry(_items.elementAt(i)));
 		}
 	}
 
 	CheckBoxListModel(Object[] _items)
 	{
-		items = new Vector(_items.length);
+		items = new Vector<JCheckBoxList.Entry>(_items.length);
 		for(int i = 0; i < _items.length; i++)
 		{
-			items.addElement(createEntry(_items[i]));
+			items.add(createEntry(_items[i]));
 		}
 	}
 
-	private JCheckBoxList.Entry createEntry(Object obj)
+	private static JCheckBoxList.Entry createEntry(Object obj)
 	{
 		if(obj instanceof JCheckBoxList.Entry)
 			return (JCheckBoxList.Entry)obj;
@@ -281,6 +293,7 @@ class CheckBoxListModel extends AbstractTableModel
 		return 2;
 	}
 
+	@Override
 	public String getColumnName(int col)
 	{
 		return null;
@@ -288,11 +301,11 @@ class CheckBoxListModel extends AbstractTableModel
 
 	public Object getValueAt(int row, int col)
 	{
-		JCheckBoxList.Entry entry = (JCheckBoxList.Entry)items.elementAt(row);
+		JCheckBoxList.Entry entry = items.get(row);
 		switch(col)
 		{
 		case 0:
-			return new Boolean(entry.checked);
+			return Boolean.valueOf(entry.checked);
 		case 1:
 			return entry.value;
 		default:
@@ -300,6 +313,7 @@ class CheckBoxListModel extends AbstractTableModel
 		}
 	}
 
+	@Override
 	public Class getColumnClass(int col)
 	{
 		switch(col)
@@ -313,22 +327,24 @@ class CheckBoxListModel extends AbstractTableModel
 		}
 	}
 
+	@Override
 	public boolean isCellEditable(int row, int col)
 	{
-		JCheckBoxList.Entry entry = (JCheckBoxList.Entry)items.elementAt(row);
+		JCheckBoxList.Entry entry = items.get(row);
 		return col == 0 && !entry.caption;
 	}
 
+	@Override
 	public void setValueAt(Object value, int row, int col)
 	{
 		if(col == 0)
 		{
-			JCheckBoxList.Entry entry = (JCheckBoxList.Entry)items.elementAt(row);
+			JCheckBoxList.Entry entry = items.get(row);
 			if(!entry.caption)
 			{
-				entry.checked = (value.equals(Boolean.TRUE));
+				entry.checked = value.equals(Boolean.TRUE);
 				fireTableRowsUpdated(row,row);
 			}
 		}
 	}
-}
+} //}}}
