@@ -4,7 +4,8 @@
  * :folding=explicit:collapseFolds=1:
  *
  * Copyright (C) 2001, 2004 Slava Pestov
- * Portions copyright (C) 2001 mike dillon
+ * Portions copyright (C) 2001 Mike Dillon
+ * Portions copyright (C) 2008 Matthieu Casanova
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -28,15 +29,14 @@ import javax.swing.border.*;
 import javax.swing.text.Segment;
 import javax.swing.*;
 import java.awt.event.*;
-import java.awt.font.*;
-import java.awt.geom.*;
 import java.awt.*;
-import java.text.*;
-import java.util.Calendar;
-import java.util.Date;
+import java.util.StringTokenizer;
 import org.gjt.sp.jedit.io.*;
 import org.gjt.sp.jedit.textarea.*;
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.jedit.gui.statusbar.StatusWidgetFactory;
+import org.gjt.sp.jedit.gui.statusbar.Widget;
+import org.gjt.sp.jedit.gui.statusbar.ToolTipLabel;
 import org.gjt.sp.util.*;
 //}}}
 
@@ -53,7 +53,7 @@ import org.gjt.sp.util.*;
  * <li>Displaying memory status
  * </ul>
  *
- * @version $Id: StatusBar.java,v 1.65 2004/07/12 19:25:07 spestov Exp $
+ * @version $Id: StatusBar.java 15589 2009-06-26 15:26:42Z daleanson $
  * @author Slava Pestov
  * @since jEdit 3.2pre2
  */
@@ -63,6 +63,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	public StatusBar(View view)
 	{
 		super(new BorderLayout());
+		setName("StatusBar");
 		setBorder(new CompoundBorder(new EmptyBorder(4,0,0,
 			(OperatingSystem.isMacOS() ? 18 : 0)),
 			UIManager.getBorder("TextField.border")));
@@ -77,40 +78,21 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		MouseHandler mouseHandler = new MouseHandler();
 
 		caretStatus = new ToolTipLabel();
+		caretStatus.setName("caretStatus");
 		caretStatus.setToolTipText(jEdit.getProperty("view.status.caret-tooltip"));
 		caretStatus.addMouseListener(mouseHandler);
 
 		message = new JLabel(" ");
 		setMessageComponent(message);
 
-		mode = new ToolTipLabel();
-		mode.setToolTipText(jEdit.getProperty("view.status.mode-tooltip"));
-		mode.addMouseListener(mouseHandler);
-
-		wrap = new ToolTipLabel();
-		wrap.setHorizontalAlignment(SwingConstants.CENTER);
-		wrap.setToolTipText(jEdit.getProperty("view.status.wrap-tooltip"));
-		wrap.addMouseListener(mouseHandler);
-
-		multiSelect = new ToolTipLabel();
-		multiSelect.setHorizontalAlignment(SwingConstants.CENTER);
-		multiSelect.setToolTipText(jEdit.getProperty("view.status.multi-tooltip"));
-		multiSelect.addMouseListener(mouseHandler);
-
-		rectSelect = new ToolTipLabel();
-		rectSelect.setHorizontalAlignment(SwingConstants.CENTER);
-		rectSelect.setToolTipText(jEdit.getProperty("view.status.rect-tooltip"));
-		rectSelect.addMouseListener(mouseHandler);
-
-		overwrite = new ToolTipLabel();
-		overwrite.setHorizontalAlignment(SwingConstants.CENTER);
-		overwrite.setToolTipText(jEdit.getProperty("view.status.overwrite-tooltip"));
-		overwrite.addMouseListener(mouseHandler);
-
-		lineSep = new ToolTipLabel();
-		lineSep.setHorizontalAlignment(SwingConstants.CENTER);
-		lineSep.setToolTipText(jEdit.getProperty("view.status.linesep-tooltip"));
-		lineSep.addMouseListener(mouseHandler);
+		modeWidget = _getWidget("mode");
+		foldWidget = _getWidget("fold");
+		encodingWidget = _getWidget("encoding");
+		wrapWidget = _getWidget("wrap");
+		multiSelectWidget = _getWidget("multiSelect");
+		rectSelectWidget = _getWidget("rectSelect");
+		overwriteWidget = _getWidget("overwrite");
+		lineSepWidget = _getWidget("lineSep");
 	} //}}}
 
 	//{{{ propertiesChanged() method
@@ -120,16 +102,6 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		Color bg = jEdit.getColorProperty("view.status.background");
 
 		showCaretStatus = jEdit.getBooleanProperty("view.status.show-caret-status");
-		showEditMode = jEdit.getBooleanProperty("view.status.show-edit-mode");
-		showFoldMode = jEdit.getBooleanProperty("view.status.show-fold-mode");
-		showEncoding = jEdit.getBooleanProperty("view.status.show-encoding");
-		showWrap = jEdit.getBooleanProperty("view.status.show-wrap");
-		showMultiSelect = jEdit.getBooleanProperty("view.status.show-multi-select");
-		showRectSelect = jEdit.getBooleanProperty("view.status.show-rect-select");
-		showOverwrite = jEdit.getBooleanProperty("view.status.show-overwrite");
-		showLineSeperator = jEdit.getBooleanProperty("view.status.show-line-seperator");
-		boolean showMemory = jEdit.getBooleanProperty("view.status.show-memory");
-		boolean showClock = jEdit.getBooleanProperty("view.status.show-clock");
 
 		panel.setBackground(bg);
 		panel.setForeground(fg);
@@ -137,24 +109,11 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		caretStatus.setForeground(fg);
 		message.setBackground(bg);
 		message.setForeground(fg);
-		mode.setBackground(bg);
-		mode.setForeground(fg);
-		wrap.setBackground(bg);
-		wrap.setForeground(fg);
-		multiSelect.setBackground(bg);
-		multiSelect.setForeground(fg);
-		rectSelect.setBackground(bg);
-		rectSelect.setForeground(fg);
-		overwrite.setBackground(bg);
-		overwrite.setForeground(fg);
-		lineSep.setBackground(bg);
-		lineSep.setForeground(fg);
 
 		// retarded GTK look and feel!
 		Font font = new JLabel().getFont();
 		//UIManager.getFont("Label.font");
 		FontMetrics fm = getFontMetrics(font);
-		Dimension dim = null;
 
 		if (showCaretStatus)
 		{
@@ -162,81 +121,53 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 
 			caretStatus.setFont(font);
 
-			dim = new Dimension(fm.stringWidth(caretTestStr),
-				fm.getHeight());
-                        caretStatus.setPreferredSize(dim);
+			Dimension dim = new Dimension(fm.stringWidth(caretTestStr),
+					fm.getHeight());
+			caretStatus.setPreferredSize(dim);
+			updateCaretStatus();
 		}
 		else
 			panel.remove(caretStatus);
 
-		box.removeAll();
-
-		if (showEncoding || showEditMode || showFoldMode)
-			box.add(mode);
-
-		if (showWrap)
+		String statusBar = jEdit.getProperty("view.status");
+		if (!StandardUtilities.objectsEqual(currentBar, statusBar))
 		{
-			dim = new Dimension(Math.max(
-				Math.max(fm.charWidth('-'),fm.charWidth('H')),
-				fm.charWidth('S')) + 1,fm.getHeight());
-			wrap.setPreferredSize(dim);
-			wrap.setMaximumSize(dim);
-			box.add(wrap);
+			box.removeAll();
+			StringTokenizer tokenizer = new StringTokenizer(statusBar);
+			while (tokenizer.hasMoreTokens())
+			{
+				String token = tokenizer.nextToken();
+				if (Character.isLetter(token.charAt(0)))
+				{
+					Widget widget = getWidget(token);
+					if (widget == null)
+					{
+						Log.log(Log.WARNING, this, "Widget " + token + " doesn't exist");
+						continue;
+					}
+					Component c = widget.getComponent();
+					c.setBackground(bg);
+					c.setForeground(fg);
+					box.add(c);
+					widget.update();
+					widget.propertiesChanged();
+				}
+				else
+				{
+					JLabel label = new JLabel(token);
+					label.setBackground(bg);
+					label.setForeground(fg);
+					box.add(label);
+				}
+			}
+			currentBar = statusBar;
 		}
-
-		if (showMultiSelect)
-		{
-			dim = new Dimension(
-				Math.max(fm.charWidth('-'),fm.charWidth('M')) + 1,
-				fm.getHeight());
-			multiSelect.setPreferredSize(dim);
-			multiSelect.setMaximumSize(dim);
-			box.add(multiSelect);
-		}
-
-		if (showRectSelect)
-		{
-			dim = new Dimension(
-				Math.max(fm.charWidth('-'),fm.charWidth('R')) + 1,
-				fm.getHeight());
-			rectSelect.setPreferredSize(dim);
-			rectSelect.setMaximumSize(dim);
-			box.add(rectSelect);
-		}
-
-		if (showOverwrite)
-		{
-			dim = new Dimension(
-				Math.max(fm.charWidth('-'),fm.charWidth('O')) + 1,
-				fm.getHeight());
-			overwrite.setPreferredSize(dim);
-			overwrite.setMaximumSize(dim);
-			box.add(overwrite);
-		}
-
-		if (showLineSeperator)
-		{
-			dim = new Dimension(Math.max(
-				Math.max(fm.charWidth('U'),
-				fm.charWidth('W')),
-				fm.charWidth('M')) + 1,
-				fm.getHeight());
-			lineSep.setPreferredSize(dim);
-			lineSep.setMaximumSize(dim);
-			box.add(lineSep);
-		}
-
-		if (showMemory)
-			box.add(new MemoryStatus());
-
-		if (showClock)
-			box.add(new Clock());
-
 		updateBufferStatus();
 		updateMiscStatus();
 	} //}}}
 
 	//{{{ addNotify() method
+	@Override
 	public void addNotify()
 	{
 		super.addNotify();
@@ -244,6 +175,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	} //}}}
 
 	//{{{ removeNotify() method
+	@Override
 	public void removeNotify()
 	{
 		super.removeNotify();
@@ -279,7 +211,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				}
 				else
 				{
-					Object[] args = { new Integer(requestCount) };
+					Object[] args = {Integer.valueOf(requestCount)};
 					setMessage(jEdit.getProperty(
 						"view.status.io",args));
 					currentMessageIsIO = true;
@@ -323,6 +255,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	//{{{ setMessage() method
 	/**
 	 * Displays a status message.
+	 * @param message the message to display, it can be null
 	 */
 	public void setMessage(String message)
 	{
@@ -362,9 +295,6 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 	//{{{ updateCaretStatus() method
 	public void updateCaretStatus()
 	{
-		//if(!isShowing())
-		//	return;
-
 		if (showCaretStatus)
 		{
 			Buffer buffer = view.getBuffer();
@@ -379,6 +309,7 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 
 			JEditTextArea textArea = view.getTextArea();
 
+			int caretPosition = textArea.getCaretPosition();
 			int currLine = textArea.getCaretLine();
 
 			// there must be a better way of fixing this...
@@ -390,445 +321,162 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 				return; // hopefully another caret update will come?
 
 			int start = textArea.getLineStartOffset(currLine);
-			int dot = textArea.getCaretPosition() - start;
+			int dot = caretPosition - start;
 
-			// see above
-			if(dot < 0)
-				return;
+ 			if(dot < 0)
+ 				return;
+ 
+			int bufferLength = buffer.getLength();
 
-			buffer.getText(start,dot,seg);
-			int virtualPosition = MiscUtilities.getVirtualWidth(seg,
-				buffer.getTabSize());
-
-			buf.setLength(0);
-			buf.append(Integer.toString(currLine + 1));
-			buf.append(',');
-			buf.append(Integer.toString(dot + 1));
-
-			if (virtualPosition != dot)
+ 			buffer.getText(start,dot,seg);
+ 			int virtualPosition = StandardUtilities.getVirtualWidth(seg,
+ 				buffer.getTabSize());
+			// for GC
+			seg.array = null;
+			seg.count = 0;
+ 
+			// per lengthy discussion on dev list, format for caret
+			// position is lineno,dot-virtual (caret/total) e.g.
+			// 388,10-31 (8835/13414).  No more "Top" nor "Bottom".
+			if (jEdit.getBooleanProperty("view.status.show-caret-linenumber", true))
+			{
+				buf.append(currLine + 1);
+				buf.append(',');
+			}
+			if (jEdit.getBooleanProperty("view.status.show-caret-dot", true))
+			{
+				buf.append(dot + 1);
+			}
+			if (jEdit.getBooleanProperty("view.status.show-caret-virtual", true) &&
+				virtualPosition != dot)
 			{
 				buf.append('-');
-				buf.append(Integer.toString(virtualPosition + 1));
+				buf.append(virtualPosition + 1);
 			}
-
-			buf.append(' ');
-
-			int firstLine = textArea.getFirstLine();
-			int visible = textArea.getVisibleLines();
-			int lineCount = textArea.getDisplayManager().getScrollLineCount();
-
-			if (visible >= lineCount)
+			if (buf.length() > 0) 
 			{
-				buf.append("All");
+				buf.append(' ');
 			}
-			else if (firstLine == 0)
+			if (jEdit.getBooleanProperty("view.status.show-caret-offset", true) &&
+				jEdit.getBooleanProperty("view.status.show-caret-bufferlength", true))
 			{
-				buf.append("Top");
+				buf.append('(');
+				buf.append(caretPosition);
+				buf.append('/');
+				buf.append(bufferLength);
+				buf.append(')');
 			}
-			else if (firstLine + visible >= lineCount)
+			else if (jEdit.getBooleanProperty("view.status.show-caret-offset", true))
 			{
-				buf.append("Bot");
+				buf.append('(');
+				buf.append(caretPosition);
+				buf.append(')');
 			}
-			else
+			else if (jEdit.getBooleanProperty("view.status.show-caret-bufferlength", true))
 			{
-				float percent = (float)firstLine / (float)lineCount
-					* 100.0f;
-				buf.append(Integer.toString((int)percent));
-				buf.append('%');
+				buf.append('(');
+				buf.append(bufferLength);
+				buf.append(')');
 			}
-
-			caretStatus.setText(buf.toString());
-		}
+				
+ 			caretStatus.setText(buf.toString());
+ 			buf.setLength(0);
+ 		}			
 	} //}}}
 
 	//{{{ updateBufferStatus() method
 	public void updateBufferStatus()
 	{
-		//if(!isShowing())
-		//	return;
-
-		Buffer buffer = view.getBuffer();
-
-		if (showWrap)
-		{
-			String wrap = buffer.getStringProperty("wrap");
-			if(wrap.equals("none"))
-				this.wrap.setText("-");
-			else if(wrap.equals("hard"))
-				this.wrap.setText("H");
-			else if(wrap.equals("soft"))
-				this.wrap.setText("S");
-		}
-
-		if (showLineSeperator)
-		{
-			String lineSep = buffer.getStringProperty("lineSeparator");
-			if("\n".equals(lineSep))
-				this.lineSep.setText("U");
-			else if("\r\n".equals(lineSep))
-				this.lineSep.setText("W");
-			else if("\r".equals(lineSep))
-				this.lineSep.setText("M");
-		}
-
-		if (showEditMode || showFoldMode || showEncoding)
-		{
-			/* This doesn't look pretty and mode line should
-			 * probably be split up into seperate
-			 * components/strings
-			 */
-			buf.setLength(0);
-
-			if (buffer.isLoaded())
-			{
-				if (showEditMode)
-					buf.append(buffer.getMode().getName());
-				if (showFoldMode)
-				{
-					if (showEditMode)
-						buf.append(",");
-					buf.append((String)view.getBuffer().getProperty("folding"));
-				}
-				if (showEncoding)
-				{
-					if (showEditMode || showFoldMode)
-						buf.append(",");
-					buf.append(buffer.getStringProperty("encoding"));
-				}
-			}
-
-			mode.setText("(" + buf.toString() + ")");
-		}
+		wrapWidget.update();
+		lineSepWidget.update();
+		modeWidget.update();
+		foldWidget.update();
+		encodingWidget.update();
 	} //}}}
 
 	//{{{ updateMiscStatus() method
 	public void updateMiscStatus()
 	{
-		//if(!isShowing())
-		//	return;
-
-		JEditTextArea textArea = view.getTextArea();
-
-		if (showMultiSelect)
-			multiSelect.setText(textArea.isMultipleSelectionEnabled()
-				? "M" : "-");
-
-		if (showRectSelect)
-			rectSelect.setText(textArea.isRectangularSelectionEnabled()
-				? "R" : "-");
-
-		if (showOverwrite)
-			overwrite.setText(textArea.isOverwriteEnabled()
-				? "O" : "-");
+		multiSelectWidget.update();
+		rectSelectWidget.update();
+		overwriteWidget.update();
 	} //}}}
 
 	//{{{ Private members
-	private View view;
-	private JPanel panel;
-	private Box box;
-	private ToolTipLabel caretStatus;
+	private String currentBar;
+	private final View view;
+	private final JPanel panel;
+	private final Box box;
+	private final ToolTipLabel caretStatus;
 	private Component messageComp;
-	private JLabel message;
-	private JLabel mode;
-	private JLabel wrap;
-	private JLabel multiSelect;
-	private JLabel rectSelect;
-	private JLabel overwrite;
-	private JLabel lineSep;
-	/* package-private for speed */ StringBuffer buf = new StringBuffer();
+	private final JLabel message;
+	private final Widget modeWidget;
+	private final Widget foldWidget;
+	private final Widget encodingWidget;
+	private final Widget wrapWidget;
+	private final Widget multiSelectWidget;
+	private final Widget rectSelectWidget;
+	private final Widget overwriteWidget;
+	private final Widget lineSepWidget;
+	/* package-private for speed */ StringBuilder buf = new StringBuilder();
 	private Timer tempTimer;
 	private boolean currentMessageIsIO;
 
-	private Segment seg = new Segment();
+	private final Segment seg = new Segment();
 
 	private boolean showCaretStatus;
-	private boolean showEditMode;
-	private boolean showFoldMode;
-	private boolean showEncoding;
-	private boolean showWrap;
-	private boolean showMultiSelect;
-	private boolean showRectSelect;
-	private boolean showOverwrite;
-	private boolean showLineSeperator;
 	//}}}
 
-	static final String caretTestStr = "9999,999-999 99%";
+	//static final String caretTestStr = "99999999,9999,999-999 99%";
+	static final String caretTestStr = "9999,999-999 (99999999/99999999)";
+
+	//{{{ getWidget() method
+	private Widget getWidget(String name)
+	{
+		if ("mode".equals(name))
+			return modeWidget;
+		if ("fold".equals(name))
+			return foldWidget;
+		if ("encoding".equals(name))
+			return encodingWidget;
+		if ("wrap".equals(name))
+			return wrapWidget;
+		if ("multiSelect".equals(name))
+			return multiSelectWidget;
+		if ("rectSelect".equals(name))
+			return rectSelectWidget;
+		if ("overwrite".equals(name))
+			return overwriteWidget;
+		if ("lineSep".equals(name))
+			return lineSepWidget;
+
+		return _getWidget(name);
+	} //}}}
+
+	//{{{ _getWidget() method
+	private Widget _getWidget(String name)
+	{
+		StatusWidgetFactory widgetFactory =
+		(StatusWidgetFactory) ServiceManager.getService("org.gjt.sp.jedit.gui.statusbar.StatusWidget", name);
+		if (widgetFactory == null)
+		{
+			Log.log(Log.ERROR, this, "Widget " + name + " doesn't exist");
+			return null;
+		}
+		return widgetFactory.getWidget(view);
+	} //}}}
 
 	//{{{ MouseHandler class
-	class MouseHandler extends MouseAdapter
+	private class MouseHandler extends MouseAdapter
 	{
+		@Override
 		public void mouseClicked(MouseEvent evt)
 		{
-			Buffer buffer = view.getBuffer();
-
 			Object source = evt.getSource();
-			if(source == caretStatus)
+			if(source == caretStatus && evt.getClickCount() == 2)
 			{
-				if(evt.getClickCount() == 2)
-					view.getTextArea().showGoToLineDialog();
+				view.getTextArea().showGoToLineDialog();
 			}
-			else if(source == mode)
-			{
-				if(evt.getClickCount() == 2)
-					new BufferOptions(view,view.getBuffer());
-			}
-			else if(source == wrap)
-				buffer.toggleWordWrap(view);
-			else if(source == multiSelect)
-				view.getTextArea().toggleMultipleSelectionEnabled();
-			else if(source == rectSelect)
-				view.getTextArea().toggleRectangularSelectionEnabled();
-			else if(source == overwrite)
-				view.getTextArea().toggleOverwriteEnabled();
-			else if(source == lineSep)
-				buffer.toggleLineSeparator(view);
 		}
-	} //}}}
-
-	//{{{ ToolTipLabel class
-	class ToolTipLabel extends JLabel
-	{
-		//{{{ getToolTipLocation() method
-		public Point getToolTipLocation(MouseEvent event)
-		{
-			return new Point(event.getX(),-20);
-		} //}}}
-	} //}}}
-
-	//{{{ MemoryStatus class
-	class MemoryStatus extends JComponent implements ActionListener
-	{
-		//{{{ MemoryStatus constructor
-		public MemoryStatus()
-		{
-			// fucking GTK look and feel
-			Font font = new JLabel().getFont();
-			//Font font = UIManager.getFont("Label.font");
-			MemoryStatus.this.setFont(font);
-
-			FontRenderContext frc = new FontRenderContext(
-				null,false,false);
-			Rectangle2D bounds = font.getStringBounds(		
-				memoryTestStr,frc);
-			Dimension dim = new Dimension((int)bounds.getWidth(),
-				(int)bounds.getHeight());
-			setPreferredSize(dim);
-			setMaximumSize(dim);
-			lm = font.getLineMetrics(memoryTestStr,frc);
-
-			setForeground(jEdit.getColorProperty("view.status.foreground"));
-			setBackground(jEdit.getColorProperty("view.status.background"));
-
-			progressForeground = jEdit.getColorProperty(
-				"view.status.memory.foreground");
-			progressBackground = jEdit.getColorProperty(
-				"view.status.memory.background");
-
-			addMouseListener(new MouseHandler());
-		} //}}}
-
-		//{{{ addNotify() method
-		public void addNotify()
-		{
-			super.addNotify();
-			timer = new Timer(2000,this);
-			timer.start();
-			ToolTipManager.sharedInstance().registerComponent(this);
-		} //}}}
-
-		//{{{ removeNotify() method
-		public void removeNotify()
-		{
-			timer.stop();
-			ToolTipManager.sharedInstance().unregisterComponent(this);
-			super.removeNotify();
-		} //}}}
-
-		//{{{ getToolTipText() method
-		public String getToolTipText()
-		{
-			Runtime runtime = Runtime.getRuntime();
-			int freeMemory = (int)(runtime.freeMemory() / 1024);
-			int totalMemory = (int)(runtime.totalMemory() / 1024);
-			int usedMemory = (totalMemory - freeMemory);
-			Integer[] args = { new Integer(usedMemory),
-				new Integer(totalMemory) };
-			return jEdit.getProperty("view.status.memory-tooltip",args);
-		} //}}}
-
-		//{{{ getToolTipLocation() method
-		public Point getToolTipLocation(MouseEvent event)
-		{
-			return new Point(event.getX(),-20);
-		} //}}}
-
-		//{{{ actionPerformed() method
-		public void actionPerformed(ActionEvent evt)
-		{
-			MemoryStatus.this.repaint();
-		} //}}}
-
-		//{{{ paintComponent() method
-		public void paintComponent(Graphics g)
-		{
-			Insets insets = new Insets(0,0,0,0);//MemoryStatus.this.getBorder().getBorderInsets(this);
-
-			Runtime runtime = Runtime.getRuntime();
-			int freeMemory = (int)(runtime.freeMemory() / 1024);
-			int totalMemory = (int)(runtime.totalMemory() / 1024);
-			int usedMemory = (totalMemory - freeMemory);
-
-			int width = MemoryStatus.this.getWidth()
-				- insets.left - insets.right;
-			int height = MemoryStatus.this.getHeight()
-				- insets.top - insets.bottom - 1;
-
-			float fraction = ((float)usedMemory) / totalMemory;
-
-			g.setColor(progressBackground);
-
-			g.fillRect(insets.left,insets.top,
-				(int)(width * fraction),
-				height);
-
-			String str = (usedMemory / 1024) + "/"
-				+ (totalMemory / 1024) + "Mb";
-
-			FontRenderContext frc = new FontRenderContext(null,false,false);
-
-			Rectangle2D bounds = g.getFont().getStringBounds(str,frc);
-		
-			Graphics g2 = g.create();
-			g2.setClip(insets.left,insets.top,
-				(int)(width * fraction),
-				height);
-
-			g2.setColor(progressForeground);
-
-			g2.drawString(str,
-				insets.left + (int)(width - bounds.getWidth()) / 2,
-				(int)(insets.top + lm.getAscent()));
-
-			g2.dispose();
-
-			g2 = g.create();
-
-			g2.setClip(insets.left + (int)(width * fraction),
-				insets.top,MemoryStatus.this.getWidth()
-				- insets.left - (int)(width * fraction),
-				height);
-
-			g2.setColor(MemoryStatus.this.getForeground());
-
-			g2.drawString(str,
-				insets.left + (int)(width - bounds.getWidth()) / 2,
-				(int)(insets.top + lm.getAscent()));
-
-			g2.dispose();
-		} //}}}
-
-		//{{{ Private members
-		private static final String memoryTestStr = "999/999Mb";
-
-		private LineMetrics lm;
-		private Color progressForeground;
-		private Color progressBackground;
-
-		private Timer timer;
-		//}}}
-
-		//{{{ MouseHandler class
-		class MouseHandler extends MouseAdapter
-		{
-			public void mousePressed(MouseEvent evt)
-			{
-				if(evt.getClickCount() == 2)
-				{
-					jEdit.showMemoryDialog(view);
-					repaint();
-				}
-			}
-		} //}}}
-	} //}}}
-
-	//{{{ Clock class
-	class Clock extends JLabel implements ActionListener
-	{
-		//{{{ Clock constructor
-		public Clock()
-		{
-			/* FontRenderContext frc = new FontRenderContext(
-				null,false,false);
-			Rectangle2D bounds = getFont()
-				.getStringBounds(getTime(),frc);
-			Dimension dim = new Dimension((int)bounds.getWidth(),
-				(int)bounds.getHeight());
-			setPreferredSize(dim);
-			setMaximumSize(dim); */
-
-			setForeground(jEdit.getColorProperty("view.status.foreground"));
-			setBackground(jEdit.getColorProperty("view.status.background"));
-		} //}}}
-
-		//{{{ addNotify() method
-		public void addNotify()
-		{
-			super.addNotify();
-			update();
-
-			int millisecondsPerMinute = 1000 * 60;
-
-			timer = new Timer(millisecondsPerMinute,this);
-			timer.setInitialDelay((int)(
-				millisecondsPerMinute
-				- System.currentTimeMillis()
-				% millisecondsPerMinute) + 500);
-			timer.start();
-			ToolTipManager.sharedInstance().registerComponent(this);
-		} //}}}
-
-		//{{{ removeNotify() method
-		public void removeNotify()
-		{
-			timer.stop();
-			ToolTipManager.sharedInstance().unregisterComponent(this);
-			super.removeNotify();
-		} //}}}
-
-		//{{{ getToolTipText() method
-		public String getToolTipText()
-		{
-			return new Date().toString();
-		} //}}}
-
-		//{{{ getToolTipLocation() method
-		public Point getToolTipLocation(MouseEvent event)
-		{
-			return new Point(event.getX(),-20);
-		} //}}}
-
-		//{{{ actionPerformed() method
-		public void actionPerformed(ActionEvent evt)
-		{
-			update();
-		} //}}}
-
-		//{{{ Private members
-		private Timer timer;
-
-		//{{{ getTime() method
-		private String getTime()
-		{
-			return DateFormat.getTimeInstance(
-				DateFormat.SHORT).format(new Date());
-		} //}}}
-
-		//{{{ update() method
-		private void update()
-		{
-			setText(getTime());
-		} //}}}
-
-		//}}}
 	} //}}}
 }
